Added GET user by ID, PATCH for user and DELETE user by ID.
